@@ -11,6 +11,7 @@ ChangeLog
     * Error states iteration support
     * Added m_timestamp to file attributes
     * Command classes store both args and kwargs.
+    * `max_retries` can be passed to Printer
 
 0.4.0 (2021-03-30)
     * new CONNECTION_TIOMEOUT constant set to 30s
